--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,7 +90,6 @@ body {
 }
 
 .footer {
-    padding-bottom: 20px;
     font-size: 1em;
     letter-spacing: 1.5px;
 }
@@ -109,6 +108,7 @@ body {
 }
 
 .footer-bottom {
+    margin-top: 20px;
     text-align: center;
     padding: 15px;
     font-size: 'Raleway', sans-serif;
