--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,6 +144,10 @@ body {
 
 }
 
+.frontpage-article-image {
+    
+}
+
 .article-author-date {
     font-weight: lighter;
     font-family: 'Raleway', sans-serif;
