--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    background: #FFF;
+    background: #ffffff;
     color: #2E2E2E;
     line-height: 1.4;
 }
@@ -170,7 +170,17 @@ body {
 }
 
 .article-content {
-    font-size: 1.2em;
+    line-height: 27px;
+    letter-spacing: 0.15px;
+    font-size: 1.26em;
+}
+
+.article-related-box {
+    margin-bottom: -10px;
+}
+
+.article-related-box-title {
+    margin-bottom: -10px;
 }
 
 .middle-news-box {
@@ -188,6 +198,10 @@ body {
 
 .article-profile-social {
     font-size: 1.5em;
+}
+
+.soft-hr {
+    border-color: #efeef1;
 }
 
 /*** Bootstrap Overrides ***/
