--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,7 +61,7 @@ body {
 
 .title:hover {
     text-decoration: none;
-    color: #5580ff;
+    color: #222222;
 }
 
 .top-navbar {
@@ -73,6 +73,10 @@ body {
     letter-spacing: 1px;
     margin-right: 15px;
     font-weight: lighter;
+}
+
+.top-navbar-item:hover {
+    border-bottom: 2px solid #222222;
 }
 
 .margin-bottom {
@@ -170,6 +174,7 @@ body {
 }
 
 .article-content {
+    font-family: 'Playfair Display', serif;
     line-height: 27px;
     letter-spacing: 0.15px;
     font-size: 1.26em;
@@ -228,6 +233,6 @@ hr {
 }
 
 a:hover {
-    color: #5580ff;
+    color: #222222;
     text-decoration: none;
 }
