--- a/public/css/elwynn.css
+++ b/public/css/elwynn.css
@@ -1,6 +1,25 @@
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400);.top-navbar-item {
-  margin-left: 7px;
-  font-size: 0.9em;
+body {
+  color: #1c1c1c;
+  margin-top: 15px;
+  font-family: 'Ubuntu';
+  font-size: 15px;
+}
+
+a {
+  color: #2e2e2e;
+}
+
+a:hover {
+  color: #222222;
+  text-decoration: none;
+}
+
+.regular-font {
+  font-family: "Ubuntu Light", sans-serif;
+}
+
+.top-navbar-item {
+  margin-right: 10px;
 }
 
 .header {
@@ -12,7 +31,6 @@
 }
 
 .categories-navbar li {
-  letter-spacing: 2px;
   margin-left: 21px;
   text-transform: uppercase;
 }
@@ -53,8 +71,7 @@
 .article-content-container {
   margin-top: 15px;
   word-spacing: 2px;
-  line-height: 30px;
-  font-size: 19px;
+  line-height: 25px;
 }
 
 .article-author-social {
@@ -63,6 +80,10 @@
 
 .related-articles-container {
   margin-top: 25px;
+}
+
+.related-articles-list li {
+  margin-bottom: 15px;
 }
 
 .footer-container {
@@ -97,27 +118,8 @@
   color: #efeef1;
 }
 
-body {
-  color: #1c1c1c;
-  margin-top: 15px;
-  font-family: "Ubuntu Light", sans-serif;
-}
-
-a {
-  color: #2e2e2e;
-}
-
-a:hover {
-  color: #222222;
-  text-decoration: none;
-}
-
 .container {
   max-width: 1000px;
-}
-
-.regular-font {
-  font-family: "Ubuntu Light", sans-serif;
 }
 
 .img-shadow {
